--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .gradle
-/build/
-
+bin
+build
 # Ignore Gradle GUI config
 gradle-app.setting
 
@@ -12,3 +12,4 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
